--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
+# .cache (already covered by .cache above)
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -128,3 +128,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IntelliJ
+.idea/
