--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "description": "A JS lib that helps you to build games in webpages.",
   "main": "src/main.ts",
-  "repository": "https://github.com/cazanjs/cazan.git",
-  "author": "Welpike <welpike@protonmail.com>",
+  "repository": "https://github.com/AeliaDev/cazan.git",
+  "author": "AeliaDev & cazan contributors",
   "license": "MIT",
   "private": false,
   "devDependencies": {
