--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && node scripts/deleteDtsFiles.js",
     "bundle-dts": "dts-bundle-generator dist/index.d.ts --out-file dist/cazan.d.ts --no-banner && node scripts/deleteDtsFiles.js",
     "release": "rollup -c && yarn run bundle-dts"
   },
