--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "rollup -c && node scripts/deleteDtsFiles.js",
-    "bundle-dts": "dts-bundle-generator dist/index.d.ts --out-file dist/cazan.d.ts --no-banner && node scripts/deleteDtsFiles.js",
+    "bundle-dts": "dts-bundle-generator dist/index.d.ts --out-file dist/cazan.d.ts --no-banner && node scripts/deleteDtsFiles.js && node scripts/addBannersForDistFiles.js",
     "release": "rollup -c && yarn run bundle-dts"
   },
   "dependencies": {
