fix pb in tests servers + add doc link in both package.json + rename setShortcutHandler in setKeyboardHandler

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JS lib that helps you to build games in webpages.",
   "main": "src/index.ts",
   "repository": "https://github.com/AeliaDev/cazan.git",
-  "author": "AeliaDev & cazan contributors",
+  "homepage": "https://github.com/AeliaDev/cazan.js",
+  "author": "AeliaDev & Cazan contributors",
   "license": "MIT",
   "private": false,
   "devDependencies": {
