edit docs + jsdoc + add 2022-2024 for licenses

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
       - multimedia/video.md
   - Utils:
       - utils/index.md
+      - utils/fps.md
   - Reference:
       - reference/index.md
   - Community:
